plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.0'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.devcourse'
version = '0.0.2'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// textIO
	implementation 'org.beryx:text-io:3.4.1'

	// configurationProperties
	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

	// mysql connector
	implementation 'mysql:mysql-connector-java:8.0.33'

	// wix embedded mysql database -> for test
	testImplementation 'com.wix:wix-embedded-mysql:4.6.2'

	// jdbc
	implementation "org.springframework.boot:spring-boot-starter-jdbc"
}

test {
	useJUnitPlatform()
}

tasks.withType(Test).configureEach {
	enabled = false
}

sourceSets {
	main {
		java {
			exclude("**/main/resources/voucher_record.csv")
			exclude("**/storage/")
		}
	}
}
